SERVER-57039 Legacy-path DDL operations are not interrupted on stepdown

(cherry picked from commit eb4e1c293ebaf9815983197f871533c3e6a23aec)